// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Line should match snapshot 1`] = `
<View
  style={
    Array [
      Object {
        "alignSelf": "stretch",
        "backgroundColor": "#efefef",
        "borderRadius": 3,
        "height": 12,
        "marginBottom": 12,
        "width": "100%",
      },
      undefined,
    ]
  }
/>
`;

exports[`Line should match snapshot with a bit more props and style 1`] = `
<View
  style={
    Array [
      Object {
        "alignSelf": "stretch",
        "backgroundColor": "#efefef",
        "borderRadius": 3,
        "height": 12,
        "marginBottom": 0,
        "width": "100%",
      },
      Object {
        "marginTop": 1000,
      },
    ]
  }
  testID="123"
/>
`;
